# img-optimize

./: .gitignore  .img-optimize.example.yaml  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt  setup.cfg
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
src/img_optimize/: __init__.py  cli.py  optimizer.py  utils.py
tests/: test_cli.py  test_integration.py  test_optimizer.py  test_utils.py
